Додає файли для 11-го ДЗ

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,32 @@
     />
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
 
+    <div class="container">
+
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          class="input"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit" class="button">Search</button>
+      </form>
+
+      <infinite-scroll data-threshold="1">
+        <div class="gallery infinite-scroll">
+          <!-- Карточки изображений -->
+        </div>
+      </infinite-scroll>
+
+      <!-- <button type="button" class="load-more button button__more">Load more</button> -->
+
+    </div>
+    
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script type="module" src="https://cdn.jsdelivr.net/npm/infinite-scroll-component/dist/infinite-scroll.min.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
