Додає файли для 11-го ДЗ

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
+    <title>Search images</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -13,28 +13,7 @@
   </head>
   <body>
 
-    <div class="container">
-
-      <form class="search-form" id="search-form">
-        <input
-          type="text"
-          class="input"
-          name="searchQuery"
-          autocomplete="off"
-          placeholder="Search images..."
-        />
-        <button type="submit" class="button">Search</button>
-      </form>
-
-      <infinite-scroll data-threshold="1">
-        <div class="gallery infinite-scroll">
-          <!-- Карточки изображений -->
-        </div>
-      </infinite-scroll>
-
-      <!-- <button type="button" class="load-more button button__more">Load more</button> -->
-
-    </div>
+    <include src="./partials/search.html"></include>
     
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script type="module" src="https://cdn.jsdelivr.net/npm/infinite-scroll-component/dist/infinite-scroll.min.js"></script>
